--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 <body>
 
 <!-- Dependências externas -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
-<script src="js/supabase.js"></script>
-<script src="js/app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+  <script src="js/supabase.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/cantina.js"></script>
+  <script src="js/aluno.js"></script>
 
 <!-- LOGIN -->
 <div class="container" id="login">
