ajustes ao editar de refeicoes

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <!-- MENUS CRIADOS -->
 <div class="container hidden" id="cantinaMenus">
-  <h2>📋 Menus Criados</h2>
+  <h2>Menus Criados</h2>
   <div style="width:100%;text-align:left;margin-bottom:20px;">
     <label style="margin-bottom:10px;">🔍 Filtrar por data (opcional):</label>
     <input type="date" id="diaMenu" style="width:100%;max-width:none;margin:0;padding:12px 14px;border:2px solid #e0e0e0;">
@@ -178,7 +178,7 @@
   </div>
   
   <div class="acoes">
-    <button class="btn-medium" onclick="exportarSaldosExcel()">📥 Exportar Saldos</button>
+    <button class="btn-medium" onclick="exportarSaldosExcel()">📥 Exportar Saldos em Dívida</button>
     <button class="btn-medium" onclick="abrirRelatorioMensal()">📊 Relatório Mensal</button>
   </div>
   <button class="btn-back" onclick="menu()">Voltar</button>
